public/css/index.css
/* ... */
aside.currently-reading .featured-book .info {
	max-width: 36ch;
	text-wrap: pretty;
	/* font-family: var(--font-family-serif); */
}

@media screen and (min-width: 650px) {
	aside {
		padding: 3.2rem 3rem 3.8rem;
	}
	aside.currently-reading .featured-book {
		flex-direction: row;
		gap: 2rem;
	}
}

aside.case-study-metadata,
.case-study-metadata {
	display: flex;
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
	justify-content: space-between;
	gap: 1rem;
	font-size: var(--font-size-sm);
	margin-bottom: 4rem;
}

aside.case-study-metadata h2,
.case-study-metadata h2 {
	font-size: var(--font-size-md);
	color: var(--color-midnight-60);
	margin-block-start: 0px;
	padding-block-start: 0px;
}

aside.case-study-metadata div p,
.case-study-metadata div p {
	margin: 0;
	text-wrap: pretty;
}

.case-study-metadata div ul {
	margin-bottom: 0px;
}

h1,
h2,
h3 {
	font-family: var(--font-family-cedar);
	font-weight: 900;
	font-style: normal;
	font-variation-settings: "wght" 850;
	line-height: 1.12;
	text-wrap: balance;
}

h1 {
	font-size: var(--font-size-xxl);
	/* margin-block-start: .4em; */
}

h2 {
	font-size: var(--font-size-lg);
	font-weight: 800;
	font-variation-settings: "wght" 750;
}

h2, h3 {
	margin: 2.4rem 0 1.4rem;
}

p, ul, ol {
	margin: 0px 0px 20px;
  }

ul li,
ol li {
	margin-bottom: 0.8rem;
}

strong {
	font-weight: var(--font-weight-bold);
}

blockquote {
	font-family: var(--font-family-cedar);
	font-variation-settings: "wght" 500;
	font-size: var(--font-size-xl);
	font-style: italic;
	line-height: 1.12;
	text-align: center;
	margin: 2rem;
}

blockquote p {
	font-size: var(--font-size-md);
	line-height: 1.1;
}

small {
	font-size: var(--font-size-sm);
}
.small-caps {
	font-variant-caps: all-small-caps;
	letter-spacing: .08rem;
	font-weight: var(--font-weight-bold);
}
.serif {
	font-family: var(--font-family-serif);
}
.centered {
	text-align: center;
}
figure {
	display: block;
    margin-block-start: 0px;
    margin-block-end: 2.8rem;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}
figcaption,
.caption {
	font-family: var(--font-family-serif);
	line-height: 1.5;
	font-weight: inherit;
	font-style: italic;
	text-align: center;
    margin-top: 1.2rem;
	hyphens: auto;
	text-wrap: pretty;
}
figure img,
img.thumbnail,
li.postlist-item a picture img {
	border-radius: var(--border-radius); 
}
li.postlist-item a picture img {
	aspect-ratio: 16 / 9;
	object-fit: cover;
}
li.postlist-item a picture img:hover {
	opacity: .8;
}
img {
	width: 100%;
	height: auto;
}

figure.stamp {
	display:flex;
	flex-direction: column;
	align-items: center;
}

figure.stamp img {
	width: 300px; 
	max-width: 100%; 
	height:auto; 
	margin-left: auto; 
	margin-right:auto;
}

iframe.yt-shortcode {
	aspect-ratio: 16 / 9;
	width: 100%;
}

/* https://www.a11yproject.com/posts/how-to-hide-content/ */
.visually-hidden,
.vh {
	clip: rect(0 0 0 0);
	clip-path: inset(50%);
	height: 1px;
	overflow: hidden;
	position: absolute;
	white-space: nowrap;
	width: 1px;
}

p:last-child {
	margin-bottom: 0;
}
p {
	line-height: 1.5;
}

li {
	line-height: 1.5;
}

/* links */

a[href] {
	color: var(--text-color-link);
	text-underline-offset: 0.2em;
}
a[href]:visited {
	color: var(--text-color-link-visited);
}
a[href]:hover,
a[href]:active {
	color: var(--text-color-link-active);
}

/* article h2 + p::first-letter {
    font-size: 250%;
  	padding: 0px;
  	margin-right: 6px;
  	float: left;
    font-weight: bold;
} */

article h2.post-deck {
	color: #989898;
	text-align: center;
	margin: 2.4rem auto 2.2rem;
	/* margin-block-end: 16vh; */
}

span.text-italic {
	/* font-family: var(--font-family-serif); */
	font-style: italic;
	/* font-size: 116%; */
}

.text-gradient {
	background: -webkit-gradient(linear, left top, right top, from(#3668cc), to(#7500ed));
    background: linear-gradient(to right, #3668cc 50%, #7500ed 100%);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: rgba(0, 0, 0, 0.15);
}

.text-gradient {
	background-image: 
    linear-gradient(
      to right in oklab, 
      oklch(53.78% 0.2742 262.342) 0%, oklch(53.78% 0.2742 262.342) 31% 31%, oklch(53.78% 0.3063 293.163) 100%);
}

section.hero,
.about-page,
.postlist-container {
	display: block;
	gap: 2rem;
	margin-bottom: 2rem;
}
section.hero h2,
h2.post-deck {
	margin-top: 0px;
	max-width: 48ch;
	font-size: var(--font-size-xl);
	font-style: italic;
	font-family: var(--font-family-cedar);
}

@media screen and (min-width: 900px) {
	section.hero h2,
	h2.post-deck {
		font-size: var(--font-size-xxl)
	}
}

section.hero,
section.featured-posts,
section.featured-case-study {
	margin-block-end: 6rem;
}

section.featured-case-study {
	display: flex;
	flex-direction: column;
	border-radius: var(--border-radius);
	margin-top: 6rem;
	gap: 4rem;
}

.case-study-wrapper {
	display: flex;
	flex-direction: column;
}

.case-study-wrapper:nth-child(even) {
	flex-direction: column-reverse;
}

section.featured-case-study .featured-case-study-image img {
	height: 12rem;
}

.featured-case-study-image img {
	object-fit: cover;
	border-radius: var(--border-radius) var(--border-radius) 0 0;
}

.case-study-wrapper:nth-child(odd) .featured-case-study-content,
.case-study-wrapper:nth-child(even) .featured-case-study-content {
	border-radius: 0 0 var(--border-radius) var(--border-radius);
}

.featured-case-study-content {
	padding-inline: 0px 2rem;
	padding: 0px 1rem;
	background-color: var(--color-aside);
}

.featured-case-study-content h2:first-of-type {
		margin-block-start: .2rem;
	}

.featured-case-study-content h3 {
	margin-block-start: 0px;
	font-size: var(--font-size-md);
	color: var(--color-midnight-60)
}
/* ... */

